# cat12

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile_1  README.md  Singularity  Singularity.def  Singularity_MCR  Singularity_MCR.def  cat12.9_octave.simg  dockerfile_MCR  makefile  pyproject.toml  requirements.txt
.datalad/: config
.github/workflows/: apptainer.yml  docker.yml
code/: _parsers.py  bids_utils.py  cat_logging.py  defaults.py  main  main.py  methods.py  requirements.txt  utils.py
docs/source/: conf.py  index.rst
src/cat12/: _parsers.py  bids_utils.py  cat_logging.py  defaults.py  main.py  methods.py  requirements.txt  utils.py
src/cat12/data/methods/: template.jinja
